--- a/rro_overlays/SettingsOverlayNabu/res/values/config.xml
+++ b/rro_overlays/SettingsOverlayNabu/res/values/config.xml
@@ -29,4 +29,7 @@
 
     <!-- Whether or not emergency info tile should display in device info page -->
     <bool name="config_show_emergency_info_in_device_info">false</bool>
+
+    <!-- Device specific doze package -->
+    <string name="config_customDozePackage">org.lineageos.settings/org.lineageos.settings.doze.DozeSettingsActivity</string>
 </resources>
