nabu: Enable Wide Color Gamut support
Change-Id: Ia50a03cd8ac32ce4bb1c1a8691d57c674b9cfb40

--- a/rro_overlays/FrameworkResOverlayNabu/res/values/config.xml
+++ b/rro_overlays/FrameworkResOverlayNabu/res/values/config.xml
@@ -575,4 +575,7 @@
          it causes the device to wake up.
          The default is false. -->
     <bool name="config_lidControlsSleep">true</bool>
+
+    <!-- Whether or not wcg mode should be enabled on this device -->
+    <bool name="config_enableWcgMode">true</bool>
 </resources>
