nabu: overlay: Specify ambient color temperature sensor
* E DisplayPowerController[0]: failed to set up display white-balance: java.lang.IllegalStateException: cannot find sensor com.google.sensor.color

Signed-off-by: SageOfD6Path <mail2anirban95@gmail.com>
Signed-off-by: saikiran2001 <bjsaikiran@gmail.com>

--- a/rro_overlays/FrameworkResOverlayNabu/res/values/config.xml
+++ b/rro_overlays/FrameworkResOverlayNabu/res/values/config.xml
@@ -590,4 +590,8 @@
         <item>com.google.android.apps.photos/.daydream.PhotosDreamService</item>
         <item>com.android.systemui/com.google.android.systemui.lowlightclock.LowLightClockDreamService</item>
     </string-array>
+
+    <!-- See AmbientSensor.AmbientColorTemperatureSensor. The ambient color temperature sensor name. -->
+    <string name="config_displayWhiteBalanceColorTemperatureSensorName">com.google.sensor.color</string>
+
 </resources>
