nabu: Pin Pixel launcher in memory
* Unlike launcher3, Pixel launcher is not light. So reloading the resources again and again will have a negetive impact on the performance. By pinning pixel launcher in memory, I am able to observe more jitter free app exit animations.

--- a/rro_overlays/FrameworkResOverlayNabu/res/values/config.xml
+++ b/rro_overlays/FrameworkResOverlayNabu/res/values/config.xml
@@ -331,6 +331,9 @@
         <item>"/system_ext/priv-app/daxService/daxService.apk"</item>
     </string-array>
 
+    <!-- Should the pinner service pin the Home application? -->
+    <bool name="config_pinnerHomeApp">true</bool>
+
     <!-- If this is true, long press on power button will be available from the non-interactive state -->
     <bool name="config_supportLongPressPowerWhenNonInteractive">false</bool>
 
